# shared/openapi.json
@@ -22,8 +22,9 @@
               {
                 "enum": [
                   "little",
-                  "manageable",
-                  "dontcare"
+                  "medium",
+                  "high",
+                  "veryhigh"
                 ],
                 "type": "string"
               },
@@ -38,8 +39,9 @@
               {
                 "enum": [
                   "little",
-                  "manageable",
-                  "dontcare"
+                  "medium",
+                  "high",
+                  "veryhigh"
                 ],
                 "type": "string"
               },
@@ -54,8 +56,9 @@
               {
                 "enum": [
                   "little",
-                  "manageable",
-                  "dontcare"
+                  "medium",
+                  "high",
+                  "veryhigh"
                 ],
                 "type": "string"
               },
@@ -70,8 +73,9 @@
               {
                 "enum": [
                   "little",
-                  "manageable",
-                  "dontcare"
+                  "medium",
+                  "high",
+                  "veryhigh"
                 ],
                 "type": "string"
               },
@@ -86,8 +90,9 @@
               {
                 "enum": [
                   "little",
-                  "manageable",
-                  "dontcare"
+                  "medium",
+                  "high",
+                  "veryhigh"
                 ],
                 "type": "string"
               },
@@ -252,8 +257,9 @@
           "crowds": {
             "enum": [
               "little",
-              "manageable",
-              "dontcare"
+              "medium",
+              "high",
+              "veryhigh"
             ],
             "title": "Crowds",
             "type": "string"
@@ -261,8 +267,9 @@
           "lights": {
             "enum": [
               "little",
-              "manageable",
-              "dontcare"
+              "medium",
+              "high",
+              "veryhigh"
             ],
             "title": "Lights",
             "type": "string"
@@ -270,8 +277,9 @@
           "noise": {
             "enum": [
               "little",
-              "manageable",
-              "dontcare"
+              "medium",
+              "high",
+              "veryhigh"
             ],
             "title": "Noise",
             "type": "string"
@@ -279,8 +287,9 @@
           "smell": {
             "enum": [
               "little",
-              "manageable",
-              "dontcare"
+              "medium",
+              "high",
+              "veryhigh"
             ],
             "title": "Smell",
             "type": "string"
@@ -288,8 +297,9 @@
           "temperature": {
             "enum": [
               "little",
-              "manageable",
-              "dontcare"
+              "medium",
+              "high",
+              "veryhigh"
             ],
             "title": "Temperature",
             "type": "string"
